[package]
name = "rocket_swagger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.16", features = ["multipart", "stream", "blocking"] }
rocket = { version = "0.5.0-rc.2", default-features = false, features = ["json"] }
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger", "rapidoc"] }
serde = "1.0"
